update note1 for EBV prediction

--- a/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
+++ b/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
@@ -105,3 +105,169 @@ $$\hat{a}_{i} = 0.45*(320-250) =$$ 31.5kg。
 育种值估计的准确度(根据公式1.6计算)
 
 $$r_{a,y} = $$ 0.67。
+
+## 1.3.2 重复记录
+
+个体的多次测定记录，如奶牛在哺乳期的多次产奶量，其均值可以用来预测个体的育种值。对于个体的多次测定记录，通常会存在如下假定：由于受到环境因子或者永久影响个体多次测定记录的环境的影响，多次测定记录间会存在更多的相似性（additional resemblance）。换句话说（in other words），受非遗传永久环境效应的影响，个体的多次测定记录间存在额外的协方差。
+
+个体间的方差可以进一步剖分为部分遗传的和部分环境的方差（永久环境效应，permanent environmental effect）；个体内的方差组分，是由对个体进行多次测量时的临时环境差异引起的。因此，观测值的方差可以进一步剖分为：
+
+公式1.9
+
+$$var(y) = var(g) + var(pe) + var(te)$$
+
+其中$$var(g)$$是加性和非加性遗传方差；$$var(pe)$$是由永久环境效应产生的方差；$$var(te)$$是由随机的(random) 临时的 (temporary) 环境效应引起的方差。
+
+组内相关（**组内个体间的相关**），指的是个体间方差与表型方差的比例(the ratio of between-individual variance to phenotypic variance)
+
+公式1.10
+
+$$t=(var(g)+var(pe))/var(y)$$
+
+t通常称之为重复力，用来测量个体记录间的相关。
+
+从公式1.10也可以反推出
+
+公式1.11
+
+$$var(te)/var(y) = 1-t$$
+
+对于公式1.10 ，通常会假设重复记录是来自同一个性状，也就是说任何成对记录间的遗传相关应该是1（**不是太理解**）。另外一个假设是：所有的测定记录，具有相同的方差。并且所有成对记录的环境相关是相同的。设定$$\tilde{y}$$表示个体i的n个记录的均值。个体i的育种值可以通过公式1.12进行预测：
+
+公式1.12
+
+$$\hat{a}_{i} = b(\tilde{y}_{i}-\mu)$$
+
+对上述公式进行推导：
+
+公式1.13
+
+$$b = cov(a,\tilde{y})/var(\tilde{y})$$
+
+体重a指的是真实育种值。进一步分解$$cov(a,\tilde{y})$$:
+
+公式1.14
+
+$$cov(a,\tilde{y}) = cov(a,g + pe + \sum{te}/n) = \sigma^{2}_{a}$$
+
+之所以能够推导出上述公式，是因为a与pe、te之间不存在相关性，所以他们的协方差为零。
+
+公式1.15
+
+$$var(\tilde{y}) = var(g) + var(pe) +var(te)/n$$
+
+对于$$var(\tilde{y})$$，不同于$$var(y)$$,最后te的方差需要除以n。
+
+根据公式1.10 和公式1.11可以对公式1.15进一步变换：
+
+公式1.16（注意，原书中这个地方写错了，写成var(t)了）
+
+$$var(\tilde{y}) = var(g) + var(pe) + (1-t)\frac{var(y)}{n} \\
+= var(y)t + (1-t)\frac{var(y)}{n} \\
+=var(y)(t + \frac{1-t}{n}) \\
+=\sigma^{2}_{y}(t + \frac{1-t}{n})
+$$
+
+根据公式1.16，那么公式1.13可以进一步简化为：
+
+公式1.17 
+
+$$
+b = cov(a,\tilde{y})/var(\tilde{y}) \\
+= \frac{\sigma^{2}_{a}}{\sigma^{2}_{y}(t + \frac{1-t}{n})} \\
+= \frac{\sigma^{2}_{a}}{\sigma^{2}_{y}}\frac{1}{t + \frac{1-t}{n}} \\
+= h^{2}\frac{1}{\frac{nt+1-t}{n}} \\
+= h^{2}\frac{1}{\frac{1+(n-1)t}{n}} \\
+= h^{2}n\frac{1}{1+(n-1)t} \\
+= \frac{nh^{2}}{1+(n-1)t} \\
+$$
+
+公式可以看出b由**遗传力、重复力和记录的重复测量次数**决定。从公式1.12中，可以推出，也意味着育种值由上述三个参数决定。
+
+就像前边提到的，假定个体重复记录的差别是由于测量连续性能（successive performance）时的现场环境差异（temporary environment）造成的。如果清楚那些影响性能的因子，会对连续记录产生影响，那么必须要进行校正。
+
+譬如，第一次和第二次哺乳期（lactation）产仔（calving）时的母牛年龄，会影响两次哺乳期的产奶量 （milk yield）。因此应用两次哺乳期产奶量均值，预测育种值时，必须要对这种年龄差异进行矫正。
+
+育种值的准确性用公式（1.18）表述为：
+
+公式1.18 （基于公式1.16和1.17）
+
+$$r_{a,\tilde{y}} = \frac{cov(a,\tilde{y})}{\sigma_{a}\sigma_{\tilde{y}}} \\
+= \frac{\sigma^{2}_{a}}{\sigma_{a}\sqrt{\sigma^{2}_{y}(t + \frac{1-t}{n})}} \\
+= \frac{\sigma_{a}}{\sqrt{\sigma^{2}_{y}(t + \frac{1-t}{n})}} \\
+= \frac{\sigma_{a}}{\sigma_{y}\sqrt{t + \frac{1-t}{n}}} \\
+= \frac{h}{\sqrt{t + \frac{1-t}{n}}} \\
+= h\sqrt{\frac{n}{nt +1-t}} \\
+= \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{b}
+$$
+
+与单性状的记录相比，多次记录其育种值估计的准确度更好，受重复力和测定记录次数影响。育种值预测准确度的提高，主要来自于当测定记录次数增加时，测定时环境方差（个体内方差）的降低。从公示1.16就可以看出。当n不断增大时，$$\sigma^{2}_{y}(t + \frac{1-t}{n})$$是不断减小的。当重复力较低时，增加测定记录次数，可以显著的提高预测准确度。
+
+譬如假定$$h^{2}$$=0.3, t=0.5，当n=1, 2, 6, 10时，育种值估计的准确度分别为
+
+n=1
+
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{1*0.3}{1+(1-1)*0.5}} \\
+=
+$$0.55
+
+结果等同于单次记录结果。
+
+n=2
+
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{2*0.3}{1+(2-1)*0.5}} \\
+=
+$$0.63
+
+n=6
+
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{6*0.3}{1+(6-1)*0.5}} \\
+=
+$$0.72
+
+n=10
+
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{10*0.3}{1+(10-1)*0.5}} \\
+=
+$$0.74
+
+当重复力比较高时，多次跟单次测量的准确度并无太大差别。这个其实是很朴素的道理，当重复力低时，也就是表示受环境影响较大，需要多次测量才会更加准确，但是当重复力比较高时，测量一次和多次的结果是一致的。
+
+如果重复力不同，那么基于不同重复力的育种值预测准确度结果，是没有可比性的。譬如如果t=1，那么无论n是多少，其育种值预测准确度都是h。但是如果t小于1，那么预测准确会大于h，但是不同重复率之间，应该是不可以比较的。
+
+例子1.2
+
+母牛第一次和第二次哺乳期的平均产奶总体均值是6000kg。一头母牛第一次和第二次哺乳期的平均产奶量是8000kg。产奶量的表型方差和遗传力是600kg和0.3，两次哺乳期产奶量的相关系数是0.5（重复力），预测育种值及其准确度。
+
+根据公式1.12
+
+$$
+\hat{a}_{1} = b(\tilde{y}_{i}-\mu) \\
+=b(8000-6000) \\
+=2000b
+$$
+
+其中b根据公式1.17计算
+$$
+b = \frac{nh^{2}}{1+(n-1)t} \\
+= \frac{2*0.3}{1+(2-1)*0.5} \\
+=
+$$0.4
+
+这头奶牛的育种值为：
+
+$$
+\hat{a}_{1} = b(\tilde{y}_{i}-\mu) \\
+=0.4*(8000-6000) \\
+=2000*0.4 \\
+=800 kg
+$$
+
+育种值估计的准确度为：
+
+$$r_{a,\tilde{y}} = \sqrt{b} = \sqrt{0.4} = 0.632$$
