--- a/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
+++ b/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
@@ -183,7 +183,7 @@ $$
 
 公式1.18 （基于公式1.16和1.17）
 
-$$r_{a,y} = \frac{cov(a,\tilde{y})}{\sigma_{a}\sigma_{\tilde{y}}} \\
+$$r_{a,\tilde{y}} = \frac{cov(a,\tilde{y})}{\sigma_{a}\sigma_{\tilde{y}}} \\
 = \frac{\sigma^{2}_{a}}{\sigma_{a}\sqrt{\sigma^{2}_{y}(t + \frac{1-t}{n})}} \\
 = \frac{\sigma_{a}}{\sqrt{\sigma^{2}_{y}(t + \frac{1-t}{n})}} \\
 = \frac{\sigma_{a}}{\sigma_{y}\sqrt{t + \frac{1-t}{n}}} \\
@@ -193,14 +193,77 @@ $$r_{a,y} = \frac{cov(a,\tilde{y})}{\sigma_{a}\sigma_{\tilde{y}}} \\
 = \sqrt{b}
 $$
 
-与单性状的记录相比，多次记录其育种值估计的准确度更好，受重复力和测定记录次数影响。譬如假定$$h^{2}$$=0.3, t=0.5，当n=2,3,...,10时，育种值估计的准确度分别为
+与单性状的记录相比，多次记录其育种值估计的准确度更好，受重复力和测定记录次数影响。育种值预测准确度的提高，主要来自于当测定记录次数增加时，测定时环境方差（个体内方差）的降低。从公示1.16就可以看出。当n不断增大时，$$\sigma^{2}_{y}(t + \frac{1-t}{n})$$是不断减小的。当重复力较低时，增加测定记录次数，可以显著的提高预测准确度。
 
-$$r_{a,y} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+譬如假定$$h^{2}$$=0.3, t=0.5，当n=1, 2, 6, 10时，育种值估计的准确度分别为
+
+n=1
+
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{1*0.3}{1+(1-1)*0.5}} \\
+=
+$$
+0.55
+结果等同于单次记录结果。
+
+n=2
+
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
 = \sqrt{\frac{2*0.3}{1+(2-1)*0.5}} \\
 =
 $$
-0.6324555
+0.63
 
+n=6
 
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{6*0.3}{1+(6-1)*0.5}} \\
+=
+$$
+0.72
 
+n=10
 
+$$r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{10*0.3}{1+(10-1)*0.5}} \\
+=
+$$
+0.74
+
+当重复力比较高时，多次跟单次测量的准确度并无太大差别。这个其实是很朴素的道理，当重复力低时，也就是表示受环境影响较大，需要多次测量才会更加准确，但是当重复力比较高时，测量一次和多次的结果是一致的。
+
+如果重复力不同，那么基于不同重复力的育种值预测准确度结果，是没有可比性的。譬如如果t=1，那么无论n是多少，其育种值预测准确度都是h。但是如果t小于1，那么预测准确会大于h，但是不同重复率之间，应该是不可以比较的。
+
+例子1.2
+
+母牛第一次和第二次哺乳期的平均产奶总体均值是6000kg。一头母牛第一次和第二次哺乳期的平均产奶量是8000kg。产奶量的表型方差和遗传力是600kg和0.3，两次哺乳期产奶量的相关系数是0.5（重复力），预测育种值及其准确度。
+
+根据公式1.12
+
+$$
+\hat{a}_{1} = b(\tilde{y}_{i}-\mu) \\
+=b(8000-6000) \\
+=2000b
+$$
+
+其中b根据公式1.17计算
+$$
+b = \frac{nh^{2}}{1+(n-1)t} \\
+= \frac{2*0.3}{1+(2-1)*0.5} \\
+=
+$$
+
+0.4
+
+这头奶牛的育种值为：
+
+$$
+\hat{a}_{1} = b(\tilde{y}_{i}-\mu) \\
+=0.4*(8000-6000) \\
+=2000*0.4 \\
+=800 kg
+$$
+
+育种值估计的准确度为：
+
+$$r_{a,\tilde{y}} = \sqrt{b} = \sqrt{0.4} = 0.632$$
