refresh data.table notet

--- a/code/2017-09-03-data.table学习笔记5-特性简介.md
+++ b/code/2017-09-03-data.table学习笔记5-特性简介.md
@@ -601,6 +601,16 @@ DT #原始数据集
 
 ```r
 X = data.table(x=c("c","b"),v=8:7,foo=c(4,2)) #X作为拟要合并的数据集
+X
+```
+
+```
+##    x v foo
+## 1: c 8   4
+## 2: b 7   2
+```
+
+```r
 X[DT,on="x"] #以DT数据集中x列为主，筛选与之匹配的X中的行，left join
 ```
 
