refresh data.table notet

--- a/_posts/2017-09-04-data.table学习笔记5-特性简介.md
+++ b/_posts/2017-09-04-data.table学习笔记5-特性简介.md
@@ -613,8 +613,11 @@ X
 ```
 
 ```r
-X[DT,on="x"] #以DT数据集中x列为主，筛选与之匹配的X中的行，left join
+X[DT,on="x"] #以DT数据集中x列为主，筛选与之匹配的X中的行，left join（相对于DT来讲）
 ```
+从下边输出的结果来看，根据x列合并数据，优先把X中的前两列v和foo放在前边。   
+对于X中x列没有的如a元素，那么用NA补充上。  
+然后是DT中剩余的两列y和v。由于X中包含了一个v，因此在次标准为i.v(i的意思是DT所处的位置属于i参数)。
 
 ```
 ##    x  v foo y i.v
@@ -630,8 +633,14 @@ X[DT,on="x"] #以DT数据集中x列为主，筛选与之匹配的X中的行，le
 ```
 
 ```r
-DT[X,on="x"] #以X数据集中x列为主，筛选与之匹配的DT行 right join
+DT[X,on="x"] #以X数据集中x列为主，筛选与之匹配的DT行 right join（相对于DT来讲）
 ```
+
+上式结果正好与前边结果相反，根据X中x列为基准，合并DT列进来。  
+X中x列只有c和b两个水平，因此DT中x列中的包括a的行自动删除掉。  
+结果中的y和v两列的元素属于DT中的两列元素。    
+其中i.v中的元素水平属于X中的v。
+
 
 ```
 ##    x y v i.v foo
