--- a/_posts/2017-11-09-XFA模型使用笔记.md
+++ b/_posts/2017-11-09-XFA模型使用笔记.md
@@ -131,7 +131,7 @@ $$
 
 XFA实际上是因子分析的一种扩展形式，参见[ASReml的说明文档](https://www.vsni.co.uk/software/asreml/htmlhelp/asreml/facanal.htm)：
 
-譬如xfa1(4)表示，原始变量有4个，公共因子只有1个，载荷系数矩阵为4*1，特殊因子为4*1。
+譬如xfa1(4)表示，原始变量有4个，公共因子只有1个，载荷系数矩阵为4行×1列，特殊因子为4行×1列。
 当时给ASReml作者Arthur Gilmour的邮件中也是这么理解的：
 
 Now I have known some about XFA and what you have write.
@@ -175,7 +175,7 @@ VPREDICT !DEFINE
 V Gen xfa1(4).nrm(AnimalID) 
 ```
 
-转换为us结构后的结果(10个参数，4*4下三角)：
+转换为us结构后的结果(10个参数，4行×4列下三角)：
 
 ```
  AnimalID               NRM   13176
@@ -192,7 +192,7 @@ V Gen xfa1(4).nrm(AnimalID)
   
 ```
 
-类似于这样,对角线为各自方差组分，其他为协方差。
+转换为us结构,对角线为各自方差组分，其他为协方差。
 
 ```
           LD.DGE          HD.DGE          LD.IGE             HD.IGE
@@ -207,6 +207,3 @@ V Gen xfa1(4).nrm(AnimalID)
 
  * 因子载荷矩阵，需要详细了解。以及在ASRreml中为什么需要zero。
  * 关于XFA，在Linear Models for the Prediction of Animal Breeding Values(3nd version)中，有讨论，可以深入看一下。
- 
- 
-        
