--- a/code/2017-11-09-XFA模型使用笔记.md
+++ b/code/2017-11-09-XFA模型使用笔记.md
@@ -126,7 +126,7 @@ $$
 
 XFA实际上是因子分析的一种扩展形式，参见[ASReml的说明文档](https://www.vsni.co.uk/software/asreml/htmlhelp/asreml/facanal.htm)：
 
-譬如xfa1(4)表示，原始变量有4个，公共因子只有1个，载荷系数矩阵为4*1，特殊因子为4*1。
+譬如xfa1(4)表示，原始变量有4个，公共因子只有1个，载荷系数矩阵为4行×1列，特殊因子为4行×1列。
 当时给ASReml作者Arthur Gilmour的邮件中也是这么理解的：
 
 Now I have known some about XFA and what you have write.
@@ -170,7 +170,7 @@ VPREDICT !DEFINE
 V Gen xfa1(4).nrm(AnimalID) 
 ```
 
-转换为us结构后的结果(10个参数，4*4下三角)：
+转换为us结构后的结果(10个参数，4行×4列下三角)：
 
 ```
  AnimalID               NRM   13176
@@ -187,7 +187,7 @@ V Gen xfa1(4).nrm(AnimalID)
   
 ```
 
-类似于这样,对角线为各自方差组分，其他为协方差。
+转换为us结构,对角线为各自方差组分，其他为协方差。
 
 ```
           LD.DGE          HD.DGE          LD.IGE             HD.IGE
