modify post's title

--- a/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
+++ b/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 第一章 基于不同来源记录的遗传评估(Genetic evaluation with different sources of records)
+title: 动物育种值预测中的线性模型学习笔记1：第一章 基于不同来源记录的遗传评估(Genetic evaluation with different sources of records)
 categories: EBV linear_model
 description: 第一章阅读笔记
 keywords: EBV
