--- a/_posts/2017-11-11-动物育种值预测中的线性模型学习笔记2-xfa.md
+++ b/_posts/2017-11-11-动物育种值预测中的线性模型学习笔记2-xfa.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 6.4 因子和主成分分析
+title: 动物育种值预测中的线性模型学习笔记2：6.4 因子和主成分分析
 categories: EBV linear_model
 description: 第六章中的内容，主要是了解fa和xfa
 keywords: EBV, xfa, fa
