--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -51,7 +51,7 @@ ggplot(data=shrimp,aes(x=SexID,y=M2BW,color=SexID))+geom_boxplot()+geom_dotplot(
 ```
 
 <div class="figure" style="text-align: left">
-<img src="2017-11-11-线型混合效应模型教程1_files/figure-html/sex.dotplot-1.png" alt="图1 雌雄虾体重分布点图"  />
+<img src="/images/2017-11-11-线型混合效应模型教程1_files/figure-html/sex.dotplot-1.png" alt="图1 雌雄虾体重分布点图"  />
 <p class="caption">图1 雌雄虾体重分布点图</p>
 </div>
 从图1中可以大体看出，雌虾体重比雄虾高。然后，我们实际计算雌雄虾体重均值，发现雌虾的确比雄虾重。
@@ -76,7 +76,7 @@ shrimp.sex.m2bw
 ggplot(shrimp,aes(x=TankID,y=M2BW,color=TankID))+geom_boxplot()+geom_dotplot(binaxis = "y",stackdir = "center",position = "dodge",binwidth = 0.3)
 ```
 
-![](2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-3-1.png)<!-- -->
+![](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-3-1.png)<!-- -->
 
 我们需要去除测试池、家系对雌雄虾体重的影响，准确估计雌雄虾体重。接下来就要用到线性模型了。
 
