--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -8,11 +8,11 @@ keywords: 线性, 混合效应, 固定效应, 随机效应
 
 学习线型混合效应模型最好的方法，是一边学习理论，一边动手实践。这样印象最为深刻。
 本文参考了Linear models and linear mixed effects models in R的结构。
-本文中，使用的数据集是来自文件shrimp.csv中的对虾育种数据。
+本文中，使用的数据集是来自文件[shrimp.csv](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
 
 ## 1 读取数据文件
 
-fread函数来自data.table包，特点是对大文件读取速度特别快。建议使用data.table作为数据处理的主力包。
+`fread()`函数来自data.table包，特点是对大文件读取速度特别快。建议使用data.table作为数据处理的主力包。
 
 其中的参数sep表示文件是用逗号分割，header表示数据文件中第一行是列名，stringsAsFactors表示读入的数据，对于字符类型，是否自动处理为因子类型。为了方便后边模型处理，这里设置为因子类型。
 
@@ -83,6 +83,7 @@ ggplot(shrimp,aes(x=TankID,y=M2BW,color=TankID))+geom_boxplot()+geom_dotplot(bin
 ## 3 线性混合效应模型简介
 
 $$M2BW = Sex + \varepsilon$$
+
 表示一尾虾的体重由性别和随机误差决定。其中$$Sex$$作为固定效应，$$\varepsilon$$作为随机效应。后者表示所有影响体重的不可测量的效应总和，是随机和不可控制的。
 
 从数据中我们发现，一尾虾的体重还受它所在的测试池和所在家系的影响。因此，这两个效应也需要放到模型中。模型进一步变为：
