modify lmm tutorial1

--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -10,6 +10,17 @@ keywords: 线性, 混合效应, 固定效应, 随机效应
 本文参考了Linear models and linear mixed effects models in R的结构。
 本文中，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
 
+本文代码使用了三个包，请提前加载。加载方法：可以在控制台（console）运行`require(data.table)`命令，加载data.table包。其他包加载命令类似。
+
+* data.table
+* ggplot2
+* lme4 
+
+初学者提示：
+
+* R代码和shrimp.csv最好保存在同一个路径下，譬如c:\shrimp文件下
+* 设置工作路径到c:\shrimp，`setwd("c:/shrimp")`
+
 ## 1 读取数据文件
 
 `fread()`函数来自data.table包，特点是对大文件读取速度特别快。建议使用data.table作为数据处理的主力包。
@@ -136,4 +147,6 @@ summary(shrimp.lm)
 
 现在解释上边的结果。首先来看`Multiple R-squared:  0.3105`，它表示模型对总体方差的解释能力。具体意思可以解释为，总体方差中的31%，可以由这个模型来解释。`Adjusted R-squared`是对`Multiple R-squared`的矫正，主要是考虑了固定效应。固定效应越多，该值越低。
 
-下一个概念是非常的重要，那就是P值。
+下一个概念是非常的重要，那就是p值。P值是否小于0.05或者0.001，已经成为文章结果是否可靠，是否能够发表的一个重要标志。但是，p值一定程度上就像SCI论文的影响因子，有点滥用的味道。
+
+我们还本溯源，本质上p值是一个条件概率，它表示**无效假设为真时的概率**。那什么是无效假设呢？在上文中，无效假设是**“对于体重性状，雌雄虾间没有差异”**，也就是说雌雄虾体重是相等的。在本文中，p值小于0.001，意味着如果”雌雄间没有差异，那么数据基本上不可能是这样“，因为**雌雄间没有差异**的概率太低！这反过来表明，性别影响了对虾的体重，雌雄虾体重是有差别的，也就是说统计上是显著的。
