--- a/code/2017-11-11-线型混合效应模型教程1.md
+++ b/code/2017-11-11-线型混合效应模型教程1.md
@@ -12,6 +12,12 @@ output:
 本文参考了Linear models and linear mixed effects models in R的结构。
 本文中，使用的数据集是来自文件shrimp.csv中的对虾育种数据。
 
+本文代码使用了三个包，请提前加载。
+
+* data.table
+* ggplot2
+* lme4 
+
 ## 1 读取数据文件
 
 fread函数来自data.table包，特点是对大文件读取速度特别快。建议使用data.table作为数据处理的主力包。
@@ -85,11 +91,13 @@ ggplot(shrimp,aes(x=TankID,y=M2BW,color=TankID))+geom_boxplot()+geom_dotplot(bin
 ## 3 线性混合效应模型简介
 
 $$M2BW = Sex + \varepsilon$$
+
 表示一尾虾的体重由性别和随机误差决定。其中$$Sex$$作为固定效应，$$\varepsilon$$作为随机效应。后者表示所有影响体重的不可测量的效应总和，是随机和不可控制的。
 
 从数据中我们发现，一尾虾的体重还受它所在的测试池和所在家系的影响。因此，这两个效应也需要放到模型中。模型进一步变为：
 
 $$M2BW = Sex + Tank + Family +\varepsilon$$
+
 新加入的两个变量，Tank和Family，如果都作为固定效应。那么上述模型称为线性模型。如果Family作为随机效应，那么上述模型称为线性混合效应模型（固定效应+随机效应）。
 
 这里碰到的一个棘手问题是，模型中一个效应到底是作为固定效应，还是随机效应？准确的说，应该是与研究目的相关。
@@ -136,5 +144,8 @@ summary(shrimp.lm)
 
 现在解释上边的结果。首先来看`Multiple R-squared:  0.3105`，它表示模型对总体方差的解释能力。具体意思可以解释为，总体方差中的31%，可以由这个模型来解释。`Adjusted R-squared`是对`Multiple R-squared`的矫正，主要是考虑了固定效应。固定效应越多，该值越低。
 
-下一个概念是非常的重要，那就是P值。
+下一个概念是非常的重要，那就是p值。P值是否小于0.05或者0.001，已经成为文章结果是否可靠，是否能够发表的一个重要标志。但是，p值一定程度上就像SCI论文的影响因子，有点滥用的味道。
 
+我们还本溯源，本质上p值是一个条件概率，它表示**无效假设为真时的概率**。那什么是无效假设呢？在上文中，无效假设是**“对于体重性状，雌雄虾间没有差异”**，也就是说雌雄虾体重是相等的。在本文中，p值小于0.001，意味着如果”雌雄间没有差异，那么数据基本上不可能是这样“，因为**雌雄间没有差异**的概率太低！这反过来表明，性别影响了对虾的体重，雌雄虾体重是有差别的，也就是说统计上是显著的。
+
+需要注意的另外一个问题是，模型整体的显著性（最底部）与系数列表单个效应的显著性还是存在差别的。上文中，两个结果是一致的，主要是因为模型中只包括1个固定效应。
