modify lmm tutorial1

--- a/code/2017-11-11-线型混合效应模型教程1.Rmd
+++ b/code/2017-11-11-线型混合效应模型教程1.Rmd
@@ -86,12 +86,25 @@ SAS for Mixed models (Second edition) 手册中对固定效应的定义为：“
 `lm()`是R自带的函数。`summary()`函数输出shrimp.lm的结果。
 ```{r}
 shrimp.lm <- lm(M2BW~SexID,shrimp)
-summary(shrimp.lm)
+shrimp.lm.sum <- summary(shrimp.lm)
+shrimp.lm.sum
 ```
 
-现在解释上边的结果。首先来看`Multiple R-squared:  0.3105`，它表示模型对总体方差的解释能力。具体意思可以解释为，总体方差中的31%，可以由这个模型来解释。`Adjusted R-squared`是对`Multiple R-squared`的矫正，主要是考虑了固定效应。固定效应越多，该值越低。
+现在解释上边的结果。首先来看`Multiple R-squared:` `r shrimp.lm.sum$r.squared`，它表示模型对总体方差的解释能力。具体意思可以解释为，总体方差中的`r round(shrimp.lm.sum$r.squared*100,2)`%，可以由这个模型来解释。`Adjusted R-squared`是对`Multiple R-squared`的矫正，主要是考虑了固定效应。固定效应越多，该值越低。
 
-下一个概念是非常的重要，那就是p值。P值是否小于0.05或者0.001，已经成为文章结果是否可靠，是否能够发表的一个重要标志。但是，p值一定程度上就像SCI论文的影响因子，有点滥用的味道。
+下一个概念是非常的重要，那就是p值。P值是否小于0.05或者0.001，已经成为文章结果是否可靠，是否能够发表的一个重要标志。但是，p值一定程度上就像SCI论文的影响因子，有点滥用的味道。Nature上关于p值的故事:[中文版本](http://blog.sciencenet.cn/blog-265205-771680.html)；[英文版本](http://www.nature.com/news/scientific-method-statistical-errors-1.14700)。
 
-我们还本溯源，本质上p值是一个条件概率，它表示**无效假设为真时的概率**。那什么是无效假设呢？在上文中，无效假设是**“对于体重性状，雌雄虾间没有差异”**，也就是说雌雄虾体重是相等的。在本文中，p值小于0.001，意味着如果”雌雄间没有差异，那么数据基本上不可能是这样“，因为**雌雄间没有差异**的概率太低！这反过来表明，性别影响了对虾的体重，雌雄虾体重是有差别的，也就是说统计上是显著的。
+我们还本溯源，本质上p值是一个条件概率，它表示**无效假设为真时的概率**。那什么是无效假设呢？在上文中，无效假设是**“对于体重性状，雌雄虾间没有差异”**，也就是说雌雄虾体重是相等的。在本文中，p值为<0.001 ，意味着如果”雌雄间没有差异，那么数据基本上不可能是这样“，因为**雌雄间没有差异**的概率太低！这反过来表明，性别影响了对虾的体重，雌雄虾体重是有差别的，也就是说统计上是显著的。
+
+需要注意的另外一个问题是，模型所有效应的显著性（最底部）与系数列表单个效应的显著性还是存在差别的。上文中，两个结果是一致的，主要是因为模型中只包括1个固定效应。如果有更多效应，这两个值就不再相等。
+
+F值是我们应该关注的另外一个参数，表示模型是否显著的一个重要参数。F值可以简单理解为处理方差与误差方差的比值，譬如在上文中，可以理解为性别间体重方差与残差方差的比值，这个值越大，那么表示雌雄间体重差异越大。需要注意，在上文中F值是1928，与两个自由度有关系（性别2-1；误差4281-1）。
+
+接下来重点讨论系数列表。你会看到SexIDMale，你可能会问，SexID有两个水平，Female去哪里了？Estimates这一列表示的固定效应值到底是什么意思？
+
+首先看一下系数列表中的(Intercept) 项，估计值是33.9399 ，是不是感觉很熟悉？它是Female体重的均值。在本文前边我们估计了雌雄体重的均值。
+
+再看一下SexIDMale的估计值，是-6.1655。Intercept估计值+SexIDMale估计值=雄虾体重值27.77。为什么要用雌虾体重值作为截距？为什么雄虾体重固定效应估计值要表示为与截距，也就是雌虾体重值的差值？
+
+
 
