--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -7,8 +7,8 @@ keywords: 线性, 混合效应, 固定效应, 随机效应
 ---
 
 学习线型混合效应模型最好的方法，是一边学习理论，一边动手实践。这样印象最为深刻。
-本文参考了Linear models and linear mixed effects models in R的结构。
-本文中，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
+本文参考了Bodo Winter博士的教程Linear models and linear mixed effects models in R[教程1](http://www.bodowinter.com/tutorial/bw_LME_tutorial1.pdf)[教程2](http://www.bodowinter.com/tutorial/bw_LME_tutorial2.pdf)的结构。
+本文中，为了便于理解，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
 
 推荐使用[Rstudio](https://www.rstudio.com/products/RStudio/)来运行[R](https://www.r-project.org/)。
 本文代码使用了三个包，请提前加载。
