--- a/code/2017-11-11-线型混合效应模型教程1.Rmd
+++ b/code/2017-11-11-线型混合效应模型教程1.Rmd
@@ -145,7 +145,8 @@ BW = 群体均值 + 雄虾的固定效应 \\
    = 27.7744
 $$ 
 
-我们随机选取一尾虾，如果是雌虾，因为截距本身设置为雌虾体重均值，因此斜率为0
+我们随机选取一尾虾，如果是雌虾，因为截距本身设置为雌虾体重均值，因此斜率为0，雌虾的预测体重为：
+
 $$
 BW = 群体均值 + 雌虾的固定效应 \\
    = 33.9399 + 0*1 \\
@@ -160,6 +161,7 @@ shrimp.lm.sex.tank.sum
 ```
 
 从上边模型中可以看出，截距是35.4265。我们把数据汇总一下：
+
 ```{r}
 shrimp[,mean(M2BW,na.rm=TRUE),by=.(SexID,TankID)]
 ```
@@ -178,6 +180,7 @@ $$
 这个数值跟Male.T1的值29.25非常接近。
 
 如果随机从T2池捞取一尾雄虾，它的预测体重为
+
 $$
 BW = 群体均值 + 雄虾的固定效应 + T2池固定效应 \\
    = 35.4265 + -6.1600*1 + -2.9786*1 \\
@@ -187,6 +190,7 @@ $$
 这个数值跟Male.T2的均值26.30非常接近。
 
 如果随机从T2池捞取一尾雌虾，它的预测体重为
+
 $$
 BW = 群体均值 + 雌虾的固定效应 + T2池固定效应 \\
    = 35.4265 + 0*1 + -2.9786*1 \\
