--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -203,7 +203,7 @@ BW = 群体均值 + 雄虾的固定效应 \\
    = 27.7744
 $$ 
 
-我们随机选取一尾虾，如果是雌虾，因为截距本身设置为雌虾体重均值，因此斜率为0
+我们随机选取一尾虾，如果是雌虾，因为截距本身设置为雌虾体重均值，因此斜率为0，雌虾的预测体重为：
 $$
 BW = 群体均值 + 雌虾的固定效应 \\
    = 33.9399 + 0*1 \\
@@ -268,6 +268,7 @@ $$
 这个数值跟Male.T1的值29.25非常接近。
 
 如果随机从T2池捞取一尾雄虾，它的预测体重为
+
 $$
 BW = 群体均值 + 雄虾的固定效应 + T2池固定效应 \\
    = 35.4265 + -6.1600*1 + -2.9786*1 \\
@@ -277,6 +278,7 @@ $$
 这个数值跟Male.T2的均值26.30非常接近。
 
 如果随机从T2池捞取一尾雌虾，它的预测体重为
+
 $$
 BW = 群体均值 + 雌虾的固定效应 + T2池固定效应 \\
    = 35.4265 + 0*1 + -2.9786*1 \\
