--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -59,7 +59,9 @@ str(shrimp)
 我们首先直观的看一下雌雄虾体重分布点图。
 
 ```r
-ggplot(data=shrimp,aes(x=SexID,y=M2BW,color=SexID))+geom_boxplot()+geom_dotplot(binaxis = "y",stackdir = "center",position = "dodge",binwidth = 0.25)
+ggplot(data=shrimp,aes(x=SexID,y=M2BW,color=SexID))+
+  geom_boxplot()+
+  geom_dotplot(binaxis = "y",stackdir = "center",position = "dodge",binwidth = 0.25)
 ```
 
 <div class="figure" style="text-align: left">
@@ -85,7 +87,9 @@ shrimp.sex.m2bw
 
 
 ```r
-ggplot(shrimp,aes(x=TankID,y=M2BW,color=TankID))+geom_boxplot()+geom_dotplot(binaxis = "y",stackdir = "center",position = "dodge",binwidth = 0.3)
+ggplot(shrimp,aes(x=TankID,y=M2BW,color=TankID))+
+  geom_boxplot()+
+    geom_dotplot(binaxis = "y",stackdir = "center",position = "dodge",binwidth = 0.3)
 ```
 
 ![](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-3-1.png)<!-- -->
@@ -204,6 +208,7 @@ BW = 群体均值 + 雄虾的固定效应 \\
 $$ 
 
 我们随机选取一尾虾，如果是雌虾，因为截距本身设置为雌虾体重均值，因此斜率为0，雌虾的预测体重为：
+
 $$
 BW = 群体均值 + 雌虾的固定效应 \\
    = 33.9399 + 0*1 \\
