--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -6,7 +6,7 @@ description: 线性混合效应模型教程1
 keywords: 线性, 混合效应, 固定效应, 随机效应
 ---
 
-学习线型混合效应模型最好的方法，是一边学习理论，一边动手实践。这样印象最为深刻。
+学习线性混合效应模型最好的方法，是一边学习理论，一边动手实践。这样印象最为深刻。
 本文参考了Bodo Winter博士的教程Linear models and linear mixed effects models in R[教程1](http://www.bodowinter.com/tutorial/bw_LME_tutorial1.pdf)[教程2](http://www.bodowinter.com/tutorial/bw_LME_tutorial2.pdf)的结构。
 本文中，为了便于理解，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
 
@@ -114,7 +114,7 @@ $$M2BW = Sex + Tank +\varepsilon$$
 
 $$M2BW = Sex + Tank + Family +\varepsilon$$
 
-新加入的两个变量，Tank和Family，如果都作为固定效应。那么上述模型称为线性模型。如果Family作为随机效应，那么上述模型称为线性混合效应模型（固定效应+随机效应）。
+新加入的两个变量，Tank和Family，如果都作为固定效应。那么上述模型称为线性模型。如果Family作为随机效应，那么模型3称为线性混合效应模型（固定效应+随机效应）。
 
 这里碰到的一个棘手问题是，模型中一个效应到底是作为固定效应，还是随机效应？准确的说，应该是与研究目的相关。
 
