--- a/code/2017-11-11-线型混合效应模型教程1.md
+++ b/code/2017-11-11-线型混合效应模型教程1.md
@@ -28,10 +28,11 @@ str(shrimp)
 ```
 
 ```
-## Classes 'data.table' and 'data.frame':	4282 obs. of  9 variables:
+## Classes 'data.table' and 'data.frame':	4282 obs. of  10 variables:
 ##  $ AnimalID: Factor w/ 4282 levels "13G1000001","13G1000002",..: 1322 1310 1317 1684 2342 2358 3897 3979 3329 3504 ...
 ##  $ SireID  : Factor w/ 100 levels "12G000K010","12G000K065",..: 12 12 12 12 12 12 76 76 12 12 ...
 ##  $ DamID   : Factor w/ 91 levels "12G000K052","12G000K097",..: 70 70 70 70 70 70 10 10 70 70 ...
+##  $ PopID   : Factor w/ 4 levels "Pop1","Pop2",..: 4 4 4 4 4 4 3 3 4 4 ...
 ##  $ FamilyID: Factor w/ 105 levels "13F1306003","13F1306004",..: 21 21 21 21 21 21 61 61 21 21 ...
 ##  $ SexID   : Factor w/ 2 levels "Female","Male": 2 1 1 1 1 1 1 1 2 2 ...
 ##  $ TankID  : Factor w/ 2 levels "T1","T2": 1 1 1 1 1 1 1 1 1 1 ...
@@ -281,3 +282,134 @@ $$
 
 这个数值跟Female.T2的均值32.436非常接近。
 
+### 4.2 带协变量的线性模型
+什么是协变量（covariate)？ wikipedia中是这样解释[协变量](https://en.wikipedia.org/wiki/Covariate)的：In statistics, a covariate is a variable that is possibly predictive of the outcome under study. A covariate may be of direct interest or it may be a confounding or interacting variable. The alternative terms explanatory variable, independent variable, or predictor, are used in a regression analysis.
+
+举个简单例子，我们把每个家系选择选择30尾个体，尾部用VIE颜色标记后，混合养殖在一起，比较每个家系的生长性能。需要考虑的一个问题就是，混合养殖前每个家系的大小，是不一样的。一般，混养前体重越大的家系，混养结束时体重也会越大。我们在分析混养后体重时，需要考虑混养前每个家系体重对它的影响。这个混养前家系体重，就是一个协变量，在回归分析中，也会称为自变量，解释变量。
+
+计算每个家系的混养后平均收获体重（M2BW）
+
+
+```r
+shrimp.taggingbw.per.family <-  shrimp[,lapply(.SD,mean,na.rm=TRUE),by=.(FamilyID),.SDcols=c("M1BW","M2BW")]
+shrimp.taggingbw.per.family
+```
+
+```
+##        FamilyID      M1BW     M2BW
+##   1: 13F1306029  3.890238 27.21860
+##   2: 13F1306714  4.010000 30.29500
+##   3: 13F1306028  4.502000 30.96800
+##   4: 13F1306046  4.445319 28.25385
+##   5: 13F1306044  4.619737 26.90000
+##  ---                              
+## 101: 13F1306020  9.263158 29.15263
+## 102: 13F1306058  9.645000 31.65909
+## 103: 13F1367078  9.446190 37.24651
+## 104: 13F1367091  9.466667 32.77949
+## 105: 13F1306728 10.681190 35.67619
+```
+
+绘制出混养前家系初始体重（M1BW）和混养后体重的散点图（M2BW）
+
+
+```r
+ggplot(data=shrimp.taggingbw.per.family,aes(x=M1BW,y=M2BW))+
+  geom_point()+
+  geom_smooth(method = "lm")
+```
+
+![](2017-11-11-线型混合效应模型教程1_files/figure-html/taggingbw.bw.point-1.png)<!-- -->
+
+很明显，二者表现为正相关，相关系数为0。因此在对比雌雄体重差异时，需要考虑加入M1BW作为协变量，对M2BW进行校正。
+
+分析下边2个模型
+
+模型4
+$$M2BW = M1BW + \varepsilon$$
+
+
+```r
+shrimp.lm.m1bw <- lm(M2BW ~ M1BW,shrimp)
+summary(shrimp.lm.m1bw)
+```
+
+```
+## 
+## Call:
+## lm(formula = M2BW ~ M1BW, data = shrimp)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -20.1879  -3.8502  -0.1894   3.7519  17.6528 
+## 
+## Coefficients:
+##             Estimate Std. Error t value Pr(>|t|)    
+## (Intercept) 24.95552    0.44265   56.38   <2e-16 ***
+## M1BW         0.82596    0.05975   13.82   <2e-16 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 5.416 on 4239 degrees of freedom
+##   (41 observations deleted due to missingness)
+## Multiple R-squared:  0.04313,	Adjusted R-squared:  0.04291 
+## F-statistic: 191.1 on 1 and 4239 DF,  p-value: < 2.2e-16
+```
+
+上边实际上是简单的回归分析，系数表中Intercept为24.96，表示当M1BW为0时，混养体重M2BW为24.96g。实际上初始体重不可能为0。因此这个截距没有实际意义。
+
+M1BW的系数估计值为0.83，表示初始体重每增加1g，混养体重会增加0.98g。
+
+模型5
+
+$$M2BW = Sex + Sex:M1BW + \varepsilon$$
+
+
+```r
+shrimp.lm.sex.m1bw <- lm(M2BW~SexID+SexID:M1BW,shrimp)
+summary(shrimp.lm.sex.m1bw)
+```
+
+```
+## 
+## Call:
+## lm(formula = M2BW ~ SexID + SexID:M1BW, data = shrimp)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -23.1754  -2.7973   0.1325   2.9258  14.6841 
+## 
+## Coefficients:
+##                  Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)      27.82303    0.49401  56.321   <2e-16 ***
+## SexIDMale        -6.05195    0.73069  -8.283   <2e-16 ***
+## SexIDFemale:M1BW  0.84089    0.06667  12.613   <2e-16 ***
+## SexIDMale:M1BW    0.82480    0.07270  11.346   <2e-16 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 4.453 on 4237 degrees of freedom
+##   (41 observations deleted due to missingness)
+## Multiple R-squared:  0.3533,	Adjusted R-squared:  0.3528 
+## F-statistic: 771.6 on 3 and 4237 DF,  p-value: < 2.2e-16
+```
+
+这个模型稍微复杂一些。从系数列表中，针对雌性两个性别，给出了不同的回归系数。这主要是由于雌雄生长速度的差异造成的，后期雌虾长速要快于雄虾。
+
+
+```r
+ggplot(data=shrimp,aes(x=M1BW,y=M2BW,color=SexID))+geom_point()
+```
+
+```
+## Warning: Removed 41 rows containing missing values (geom_point).
+```
+
+![](2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-8-1.png)<!-- -->
+
+我们根据模型5来预测一尾雄虾的体重,假定它的混养前体重为5g。
+
+$$
+M2BW = 27.82 + -6.05 + 0.82*5 \\
+=25.87g
+$$
