--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -296,7 +296,7 @@ $$
 ### 4.2 带协变量的线性模型
 什么是协变量（covariate)？ wikipedia中是这样解释[协变量](https://en.wikipedia.org/wiki/Covariate)的：In statistics, a covariate is a variable that is possibly predictive of the outcome under study. A covariate may be of direct interest or it may be a confounding or interacting variable. The alternative terms explanatory variable, independent variable, or predictor, are used in a regression analysis.
 
-举个简单例子，我们把每个家系选择选择30尾个体，尾部用VIE颜色标记后，混合养殖在一起，比较每个家系的生长性能。需要考虑的一个问题就是，混合养殖前每个家系的大小，是不一样的。一般，混养前体重越大的家系，混养结束时体重也会越大。我们在分析混养后体重时，需要考虑混养前每个家系体重对它的影响。这个混养前家系体重，就是一个协变量，在回归分析中，也会称为自变量，解释变量。
+举个简单例子，我们从每个家系选择选择30尾个体，尾部用VIE颜色标记后，混合养殖在一起，比较每个家系的生长性能。需要考虑的一个问题就是，混合养殖前每个家系的大小，是不一样的。一般，混养前体重越大的家系，混养结束时体重也会越大。我们在分析混养后体重时，需要考虑混养前每个家系体重对它的影响。这个混养前家系体重，就是一个协变量，在回归分析中，也会称为自变量，解释变量。
 
 计算每个家系的混养后平均收获体重（M2BW）
 
@@ -332,11 +332,12 @@ ggplot(data=shrimp.taggingbw.per.family,aes(x=M1BW,y=M2BW))+
 
 ![](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/taggingbw.bw.point-1.png)<!-- -->
 
-很明显，二者表现为正相关，相关系数为0。因此在对比雌雄体重差异时，需要考虑加入M1BW作为协变量，对M2BW进行校正。
+很明显，二者表现为正相关，相关系数为0.44。因此在对比雌雄体重差异时，需要考虑加入M1BW作为协变量，对M2BW进行校正。
 
-分析下边2个模型
+分析下边2个模型：
 
-模型4
+<a id="4">模型4</a>
+
 $$M2BW = M1BW + \varepsilon$$
 
 
@@ -371,7 +372,7 @@ summary(shrimp.lm.m1bw)
 
 M1BW的系数估计值为0.83，表示初始体重每增加1g，混养体重会增加0.98g。
 
-模型5
+<a id="5">模型5</a>
 
 $$M2BW = Sex + Sex:M1BW + \varepsilon$$
 
@@ -405,7 +406,7 @@ summary(shrimp.lm.sex.m1bw)
 ## F-statistic: 771.6 on 3 and 4237 DF,  p-value: < 2.2e-16
 ```
 
-这个模型稍微复杂一些。从系数列表中，针对雌性两个性别，给出了不同的回归系数。这主要是由于雌雄生长速度的差异造成的，后期雌虾长速要快于雄虾。
+这个模型稍微复杂一些。从系数列表中，针对雌性两个性别，给出了不同的回归系数。这主要是由于雌雄生长速度的差异造成的，后期雌虾生长速要快于雄虾。
 
 
 ```r
@@ -416,11 +417,12 @@ ggplot(data=shrimp,aes(x=M1BW,y=M2BW,color=SexID))+geom_point()
 ## Warning: Removed 41 rows containing missing values (geom_point).
 ```
 
-![](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-8-1.png)<!-- -->
+![雌雄虾体重分布散点图](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-8-1.png)<!-- -->
 
-我们根据模型5来预测一尾雄虾的体重,假定它的混养前体重为5g。
+我们根据[模型5](#5)来预测一尾雄虾的体重,假定它的混养前体重为5g。
 
 $$
 M2BW = 27.82 + -6.05 + 0.82*5 \\
 =25.87g
 $$
+
