--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -370,7 +370,7 @@ summary(shrimp.lm.m1bw)
 
 上边实际上是简单的回归分析，系数表中Intercept为24.96，表示当M1BW为0时，混养体重M2BW为24.96g。实际上初始体重不可能为0。因此这个截距没有实际意义。
 
-M1BW的系数估计值为0.83，表示初始体重每增加1g，混养体重会增加0.98g。
+M1BW的系数估计值为0.83，表示初始体重每增加1g，混养体重会增加0.83g。
 
 <a id="5">模型5</a>
 
@@ -419,7 +419,7 @@ ggplot(data=shrimp,aes(x=M1BW,y=M2BW,color=SexID))+geom_point()
 
 ![雌雄虾体重分布散点图](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-8-1.png)<!-- -->
 
-我们根据[模型5](#5)来预测一尾雄虾的体重,假定它的混养前体重为5g。
+我们根据[模型5](#5)来预测一尾雄虾的体重,假定它的混养前体重为5g，那么它的混养后体重为25.87g。
 
 $$
 M2BW = 27.82 + -6.05 + 0.82*5 \\
