--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -6,7 +6,7 @@ description: 线性混合效应模型教程1
 keywords: 线性, 混合效应, 固定效应, 随机效应
 ---
 
-学习线性混合效应模型最好的方法，是一边学习理论，一边动手实践。这样印象最为深刻。
+学习线性混合效应模型最好的方法，是一边学习理论，一边动手实践，这样印象最为深刻。
 本文参考了Bodo Winter博士的教程Linear models and linear mixed effects models in R[教程1](http://www.bodowinter.com/tutorial/bw_LME_tutorial1.pdf)[教程2](http://www.bodowinter.com/tutorial/bw_LME_tutorial2.pdf)的结构。
 本文中，为了便于理解，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
 
@@ -169,6 +169,8 @@ summary(shrimp.lm)
 F值是我们应该关注的另外一个参数，表示模型是否显著的一个重要参数。F值可以简单理解为处理方差与误差方差的比值，譬如在上文中，可以理解为性别间体重方差与残差方差的比值，这个值越大，那么表示雌雄间体重差异越大。需要注意，在上文中F值是1928，与两个自由度有关系（性别2-1；误差4281-1）。
 
 接下来重点讨论系数列表。你会看到SexIDMale，你可能会问，SexID有两个水平，Female去哪里了？Estimates这一列表示的固定效应值到底是什么意思？
+
+需要注意，系数列表中最后一列p值，表示估计值偏离0的程度。
 
 首先看一下系数列表中的(Intercept) 项，估计值是33.9399 ，是不是感觉很熟悉？它是Female体重的均值。在本文前边我们估计了雌雄体重的均值。
 
@@ -425,4 +427,102 @@ $$
 M2BW = 27.82 + -6.05 + 0.82*5 \\
 =25.87g
 $$
+
+### 4.3 包括交互效应的线性模型
+
+模型已经变的越来越复杂了。我们进一步在[模型5](#5)中加入养殖池TankID效应。
+
+<a id="6">模型6</a>
+
+$$M2BW = Sex + Tank + Sex:M1BW$$
+
+
+```r
+shrimp.lm.sex.tank.m1bw <- lm(M2BW ~ SexID + TankID + SexID:M1BW,shrimp)
+summary(shrimp.lm.sex.tank.m1bw)
+```
+
+```
+## 
+## Call:
+## lm(formula = M2BW ~ SexID + TankID + SexID:M1BW, data = shrimp)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -21.7146  -2.6244   0.1257   2.7420  15.6559 
+## 
+## Coefficients:
+##                  Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)      29.13570    0.46947  62.061  < 2e-16 ***
+## SexIDMale        -5.56384    0.68954  -8.069 9.16e-16 ***
+## TankIDT2         -2.96107    0.12907 -22.942  < 2e-16 ***
+## SexIDFemale:M1BW  0.86425    0.06289  13.742  < 2e-16 ***
+## SexIDMale:M1BW    0.78082    0.06860  11.383  < 2e-16 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 4.2 on 4236 degrees of freedom
+##   (41 observations deleted due to missingness)
+## Multiple R-squared:  0.4248,	Adjusted R-squared:  0.4242 
+## F-statistic:   782 on 4 and 4236 DF,  p-value: < 2.2e-16
+```
+
+从Adjusted R-squared参数（0.42 vs 0.31可以看出，模型6 对数据的解释能力，相比模型1，已经大幅度提高了。也就是说根据模型6预测体重，准确性比模型1要高。
+
+什么是交互效应？Interaction effects represent the combined effects of factors on the dependent measure. When an
+interaction effect is present, the impact of one factor depends on the level of the other factor。两个效应间相互影响，促进或者制约的关系。
+
+譬如，我们数据中有Sex和Tank两个固定效应，那么我们可能会想 雌虾会不会在特别偏爱某种环境，譬如在T1池中长得比T2池中大，但是雄虾可能会在T2池中长的比T1池大？因此我们可以在模型中试着加入交互效应。
+
+<a id="7">模型7</a>
+
+$$M2BW = Sex + Tank + Sex:Tank + Sex:M1BW$$
+
+
+```r
+shrimp.lm.sex.tank.m1bw.interaction <- lm(M2BW ~ SexID + TankID + SexID:TankID + SexID:M1BW,shrimp)
+summary(shrimp.lm.sex.tank.m1bw.interaction)
+```
+
+```
+## 
+## Call:
+## lm(formula = M2BW ~ SexID + TankID + SexID:TankID + SexID:M1BW, 
+##     data = shrimp)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -21.6692  -2.6120   0.1154   2.7398  15.7023 
+## 
+## Coefficients:
+##                    Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)        29.17643    0.47273  61.719  < 2e-16 ***
+## SexIDMale          -5.66459    0.70297  -8.058 9.99e-16 ***
+## TankIDT2           -3.05296    0.17937 -17.021  < 2e-16 ***
+## SexIDMale:TankIDT2  0.19059    0.25831   0.738    0.461    
+## SexIDFemale:M1BW    0.86498    0.06290  13.751  < 2e-16 ***
+## SexIDMale:M1BW      0.78228    0.06863  11.399  < 2e-16 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 4.201 on 4235 degrees of freedom
+##   (41 observations deleted due to missingness)
+## Multiple R-squared:  0.4248,	Adjusted R-squared:  0.4242 
+## F-statistic: 625.7 on 5 and 4235 DF,  p-value: < 2.2e-16
+```
+
+从系数表中，可以看出Sex和Tank间没有互作效应，p=0.461 > 0.05。Adjusted R-squared:  0.4242也表明，相比[模型6](#6)，[模型7](#7)的解释能力并没有提高。
+
+我们图形展示一下模型7固定效应
+
+
+```r
+plot_model(shrimp.lm.sex.tank.m1bw.interaction,show.values = TRUE)
+```
+
+![](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/figure.4-1.png)<!-- -->
+
+不考虑除残差外的随机效应，目前模型6是最优模型。我们根据[模型6](#6)，可以回答最初的问题，雌雄体重间差异显著。接下来，我们会考虑在模型中刚加入随机效应，进入线性混合效应模型部分。
+
+
 
