--- a/code/2017-11-11-线型混合效应模型教程1.md
+++ b/code/2017-11-11-线型混合效应模型教程1.md
@@ -10,9 +10,22 @@ output:
 ---
 
 
-学习线型混合效应模型最好的方法，是一边学习理论，一边动手实践。这样印象最为深刻。
-本文参考了Linear models and linear mixed effects models in R的结构。
-本文中，使用的数据集是来自文件shrimp.csv中的对虾育种数据。
+学习线性混合效应模型最好的方法，是一边学习理论，一边动手实践，这样印象最为深刻。
+本文参考了Bodo Winter博士的教程Linear models and linear mixed effects models in R[教程1](http://www.bodowinter.com/tutorial/bw_LME_tutorial1.pdf)[教程2](http://www.bodowinter.com/tutorial/bw_LME_tutorial2.pdf)的结构。
+本文中，为了便于理解，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
+
+推荐使用[Rstudio](https://www.rstudio.com/products/RStudio/)来运行[R](https://www.r-project.org/)。
+本文代码使用了三个包，请提前加载。
+* data.table
+* ggplot2
+* lme4 
+* sjPlot
+
+加载方法：可以在控制台（console）运行`require(data.table)`命令，加载data.table包。其他包加载命令类似。
+
+初学者提示：
+* R代码和shrimp.csv最好保存在同一个路径下，譬如c:\shrimp文件下
+* 设置工作路径到c:\shrimp，`setwd("c:/shrimp")`
 
 ## 1 读取数据文件
 
@@ -359,7 +372,7 @@ summary(shrimp.lm.m1bw)
 
 上边实际上是简单的回归分析，系数表中Intercept为24.96，表示当M1BW为0时，混养体重M2BW为24.96g。实际上初始体重不可能为0。因此这个截距没有实际意义。
 
-M1BW的系数估计值为0.83，表示初始体重每增加1g，混养体重会增加0.98g。
+M1BW的系数估计值为0.83，表示初始体重每增加1g，混养体重会增加0.83g。
 
 <a id="5">模型5</a>
 
@@ -408,9 +421,107 @@ ggplot(data=shrimp,aes(x=M1BW,y=M2BW,color=SexID))+geom_point()
 
 ![](2017-11-11-线型混合效应模型教程1_files/figure-html/unnamed-chunk-8-1.png)<!-- -->
 
-我们根据[模型5](#5)来预测一尾雄虾的体重,假定它的混养前体重为5g。
+我们根据[模型5](#5)来预测一尾雄虾的体重,假定它的混养前体重为5g，那么它的混养后体重为25.87g。
 
 $$
 M2BW = 27.82 + -6.05 + 0.82*5 \\
 =25.87g
 $$
+
+### 4.3 包括交互效应的线性模型
+
+模型已经变的越来越复杂了。我们进一步在[模型5](#5)中加入养殖池TankID效应。
+
+<a id="6">模型6</a>
+
+$$M2BW = Sex + Tank + Sex:M1BW$$
+
+
+```r
+shrimp.lm.sex.tank.m1bw <- lm(M2BW ~ SexID + TankID + SexID:M1BW,shrimp)
+summary(shrimp.lm.sex.tank.m1bw)
+```
+
+```
+## 
+## Call:
+## lm(formula = M2BW ~ SexID + TankID + SexID:M1BW, data = shrimp)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -21.7146  -2.6244   0.1257   2.7420  15.6559 
+## 
+## Coefficients:
+##                  Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)      29.13570    0.46947  62.061  < 2e-16 ***
+## SexIDMale        -5.56384    0.68954  -8.069 9.16e-16 ***
+## TankIDT2         -2.96107    0.12907 -22.942  < 2e-16 ***
+## SexIDFemale:M1BW  0.86425    0.06289  13.742  < 2e-16 ***
+## SexIDMale:M1BW    0.78082    0.06860  11.383  < 2e-16 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 4.2 on 4236 degrees of freedom
+##   (41 observations deleted due to missingness)
+## Multiple R-squared:  0.4248,	Adjusted R-squared:  0.4242 
+## F-statistic:   782 on 4 and 4236 DF,  p-value: < 2.2e-16
+```
+
+从Adjusted R-squared参数（0.42 vs 0.31可以看出，模型6 对数据的解释能力，相比模型1，已经大幅度提高了。也就是说根据模型6预测体重，准确性比模型1要高。
+
+什么是交互效应？Interaction effects represent the combined effects of factors on the dependent measure. When an
+interaction effect is present, the impact of one factor depends on the level of the other factor。两个效应间相互影响，促进或者制约的关系。
+
+譬如，我们数据中有Sex和Tank两个固定效应，那么我们可能会想 雌虾会不会在特别偏爱某种环境，譬如在T1池中长得比T2池中大，但是雄虾可能会在T2池中长的比T1池大？因此我们可以在模型中试着加入交互效应。
+
+<a id="7">模型7</a>
+
+$$M2BW = Sex + Tank + Sex:Tank + Sex:M1BW$$
+
+
+```r
+shrimp.lm.sex.tank.m1bw.interaction <- lm(M2BW ~ SexID + TankID + SexID:TankID + SexID:M1BW,shrimp)
+summary(shrimp.lm.sex.tank.m1bw.interaction)
+```
+
+```
+## 
+## Call:
+## lm(formula = M2BW ~ SexID + TankID + SexID:TankID + SexID:M1BW, 
+##     data = shrimp)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -21.6692  -2.6120   0.1154   2.7398  15.7023 
+## 
+## Coefficients:
+##                    Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)        29.17643    0.47273  61.719  < 2e-16 ***
+## SexIDMale          -5.66459    0.70297  -8.058 9.99e-16 ***
+## TankIDT2           -3.05296    0.17937 -17.021  < 2e-16 ***
+## SexIDMale:TankIDT2  0.19059    0.25831   0.738    0.461    
+## SexIDFemale:M1BW    0.86498    0.06290  13.751  < 2e-16 ***
+## SexIDMale:M1BW      0.78228    0.06863  11.399  < 2e-16 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 4.201 on 4235 degrees of freedom
+##   (41 observations deleted due to missingness)
+## Multiple R-squared:  0.4248,	Adjusted R-squared:  0.4242 
+## F-statistic: 625.7 on 5 and 4235 DF,  p-value: < 2.2e-16
+```
+
+从系数表中，可以看出Sex和Tank间没有互作效应，p=0.461 > 0.05。Adjusted R-squared:  0.4242也表明，相比[模型6](#6)，[模型7](#7)的解释能力并没有提高。
+
+我们图形展示一下模型7固定效应
+
+
+```r
+plot_model(shrimp.lm.sex.tank.m1bw.interaction,show.values = TRUE)
+```
+
+![](2017-11-11-线型混合效应模型教程1_files/figure-html/figure.4-1.png)<!-- -->
+
+不考虑除残差外的随机效应，目前模型6是最优模型。我们根据[模型6](#6)，可以回答最初的问题，雌雄体重间差异显著。接下来，我们会考虑在模型中刚加入随机效应，进入线性混合效应模型部分。
+
+
