--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -6,7 +6,7 @@ description: 线性混合效应模型教程1
 keywords: 线性, 混合效应, 固定效应, 随机效应
 ---
 
-学习线性混合效应模型最好的方法，是一边学习理论，一边动手实践，这样印象最为深刻。
+学习线性混合效应模型（Linear Mixed Effects Model，LMM）最好的方法，是一边学习理论，一边动手实践，这样印象最为深刻。
 本文参考了Bodo Winter博士的教程Linear models and linear mixed effects models in R[教程1](http://www.bodowinter.com/tutorial/bw_LME_tutorial1.pdf)[教程2](http://www.bodowinter.com/tutorial/bw_LME_tutorial2.pdf)的结构。
 本文中，为了便于理解，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
 
@@ -511,7 +511,7 @@ summary(shrimp.lm.sex.tank.m1bw.interaction)
 ## F-statistic: 625.7 on 5 and 4235 DF,  p-value: < 2.2e-16
 ```
 
-从系数表中，可以看出Sex和Tank间没有互作效应，p=0.461 > 0.05。Adjusted R-squared:  0.4242也表明，相比[模型6](#6)，[模型7](#7)的解释能力并没有提高。
+从系数表中，可以看出，相比两个主效应（SexIDMale：-5.66、TankIDT2：-3.05），Sex和Tank的交互效应非常小（0.19），p=0.461 > 0.05，统计检验与0相比，达不到显著水平。Adjusted R-squared:  0.4242也表明，相比[模型6](#6)，[模型7](#7)的解释能力并没有提高。
 
 我们图形展示一下模型7固定效应
 
