--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -11,10 +11,11 @@ keywords: 线性, 混合效应, 固定效应, 随机效应
 本文中，为了便于理解，使用的数据集是来自csv文件[shrimp](https://luansheng.github.io/code/shrimp.csv)中的对虾育种数据。
 
 推荐使用[Rstudio](https://www.rstudio.com/products/RStudio/)来运行[R](https://www.r-project.org/)。
-本文代码使用了三个包，请提前加载。
+本文代码使用了四个包，请提前加载。
 * data.table
 * ggplot2
-* lme4 
+* lme4
+* sjPlot 
 
 加载方法：可以在控制台（console）运行`require(data.table)`命令，加载data.table包。其他包加载命令类似。
 
