add lmm tutorial2

--- a/_posts/2017-11-19-线性混合效应模型教程1.md
+++ b/_posts/2017-11-19-线性混合效应模型教程1.md
@@ -523,7 +523,7 @@ plot_model(shrimp.lm.sex.tank.m1bw.interaction,show.values = TRUE)
 
 ![](/images/2017-11-11-线型混合效应模型教程1_files/figure-html/figure.4-1.png)<!-- -->
 
-不考虑除残差外的随机效应，目前模型6是最优模型。我们根据[模型6](#6)，可以回答最初的问题，雌雄体重间差异显著。接下来，我们会考虑在模型中刚加入随机效应，进入线性混合效应模型部分。
+不考虑除残差外的随机效应，目前模型6是最优模型。我们根据[模型6](#6)，可以回答最初的问题，雌雄体重间差异显著。接下来，我们会考虑在模型中加入随机效应，进入线性混合效应模型部分。
 
 
 
